Website/style.css
/* ... */
  
  /*The squiggly line = select all the .checkbubble classes within "input"*/
.moodGoals:hover input ~ .checkbubble {
    background-color: #C1C7DE;
  }
.moodGoals input:checked ~ .checkbubble {
    background-color: #3D3F46;
    border: 1px solid #f9f3f2;
  }

.goalImgs{
    position: absolute;
    height: 100%;
    width: 100%;
    object-fit: cover;
    top: 0px;
    left: 0px;
    border-radius: 20px;
    border: 1px solid #f9f3f2;
    z-index: -1;
}

.moodImgBed{
    object-position: 25% 77%;
}

.moodImgApple{
    object-position: 0% 40%;
}

.moodImgForest{
    object-position: 0% 83%;
}

.moodImgTalk{
    object-position: 0% 40%;
}

.moodImgGroc{
    object-position: 0% 50%;
}

.moodImgLaund{
    object-position: 0% 88%;
}

.moodImgFriend{
    object-position: 0% 65%;
}

input.moodFriend{
    background: url('MoodGoalFlower.jpg');
    background-size: cover;
    background-position: 0% 62%;
    padding-left:20px;
    color: #f9f3f2;
    font-weight: bold;
    -webkit-text-stroke-color: #444444;
    -webkit-text-stroke-width: 1px;
}

input.moodFriend::-moz-placeholder{
    opacity: 1;
    color: #f9f3f2;
    font-weight: bold;
    -webkit-text-stroke-color: #444444;
    -webkit-text-stroke-width: 1px;
}

#moodJournal{
    position: relative;
    width: 66%;
    left: 19%;
    border-radius: 20px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 24px;
    margin: 1%;
    padding: 1%;
}

.moodSaveGfn{
    position: relative;
    left: 14%;
    width: 67%;
    border-radius: 20px;
    border: 1px solid #444444;
    font-size: 24px;
    margin: 3% 0 3% 5%;
    padding: 1% 2%;
}

.moodFooter{
    position: relative;
    top: 50px;
    bottom: 0%;
    background-color: #3D3F46;
    height: 369px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.FooterSectionTitle{
    font-weight: bold;
}


/*Resource Page*/

/*Resources Nav Bar starts*/
.resBody , reshtml {
    height: 100%;
    margin: 0px;
    background-color: #D6EDFF;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.resA{
    text-decoration: none;
}

.resNav{
    height: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.profilePic{
    width: 80px;
    height: 80px;
    object-fit: cover;
    border-radius: 60px;
}

.resNavBrand{
    font-size: 28px;
    color: #000000;
    font-weight: 700;
}

.resNavSleep{
    font-size: 21px;
    color: #000000;
}

.resNavMood{
    font-size: 21px;
    color: #000000;
}

.resNavMeditation{
    font-size: 21px;
    color: #000000;
}

.resNavResource{
    font-size: 21px;
    font-weight: 700;
    text-decoration: underline;
    color: #000000;
}

.searchIcon{
    width: 60px;
    height: 60px;
    object-fit: cover;
}
/*Resources Nav Bar ends*/

.ResSection1{
    background-color: #40798C;
    height: 831px;
}

.ResSection1Header{
    margin: 0;
    font-size: 70px;
    color: white;
    text-align: center;
    
}
.ResSection1Top{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 60px;
    justify-content: center;
    padding-top: 20px;
}
.rounded{
    border-radius: 22px;
}
.MassageCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-one{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.AcupunctureCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-two{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.CounsellingCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-three{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.ResSection2{
    background-color: #D6EDFF;
    justify-content: center;
}
.books{
    padding-left: 300px;
}
.Team{
    padding-left: 350px;
}
.Reviews{
    padding-left: 350px;
}
.FAQ{
    padding-left: 350px;
}
.Extrahelp{
    padding-left: 350px;
}
.row-one{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 13px;
    cursor: pointer;
    object-fit: cover;
    justify-content: center;
}
.row-two{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 13px;
    padding-top: 8px;
    cursor: pointer;
    object-fit: cover;
    justify-content: center;
}
.ResSection2Part2{
    display: flex;
    gap: 5px;
}
.ResBox1{  
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding-top: 70px;
    padding-bottom: 60px;
    gap: 50px;
    justify-content: center;
    flex-direction: row;
    align-items: flex-start;
}

.ResRightBox{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;

}
.ResBox2{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;
}
.ResBox3{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;
}


.ResBox1:hover{
    cursor: pointer;
}

.ResS1HeaderText{
    font-size: 24px;
    color: #191919;
    margin: 0;
}

.ResBoxTop{
    padding-top: 15px;
    padding-left: 35px;
}
.ResSection2Part3{
    justify-content: center;
}

.ResBoxBottom{
    padding-top: 70px;
}
.Headshot{
    border-radius: 40px;
    border: solid 2px black;
    margin-top: 20px;
    margin-left: 40px;
    object-fit: cover;
}
/* ... */

